--- a/css/about.css
+++ b/css/about.css
@@ -26,7 +26,7 @@ main .college-content .college-main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 3.4375vw 0 1.5104vw;
+  padding: 2.292vw 0 3.645vw;
 }
 main .college-content .college-main .college-rigth {
   width: 50%;
@@ -39,7 +39,7 @@ main .college-content .college-main .college-rigth .rigth-title {
   color: #1C1C1C;
 }
 main .college-content .college-main .college-rigth .number {
-  margin: 4.3229vw 0 3.385vw;
+  margin: 2.604vw 0;
 }
 main .college-content .college-main .college-rigth .number .wow {
   display: -webkit-box;
@@ -94,7 +94,6 @@ main .college-content .college-main .college-rigth .cullist ul li .txt {
   color: rgb(1, 206, 115);
 }
 main .mobaily {
-  padding: 1.615vw 0 2.344vw;
   background: url(../img/about/bj.png);
 }
 main .mobaily-main .mobaily-title {
@@ -102,7 +101,7 @@ main .mobaily-main .mobaily-title {
   color: #fff;
 }
 main .mobaily-main .mobaily-content {
-  margin: 2.708vw 0;
+  margin: 2.239vw 0;
 }
 main .mobaily-main .mobaily-content .mobaily-item {
   width: 30.769%;
@@ -151,7 +150,7 @@ main .mobaily-main .mobaily-footer a {
   padding: 12px 0;
 }
 main .develop {
-  padding: 3.542vw 0 5.1042vw;
+  padding: 2.292vw 0 3.646vw;
   background: #F8FAFA;
 }
 main .develop .develop-main .develop-title {
@@ -168,7 +167,7 @@ main .develop .develop-main .develop-content .pc--img-hide {
   display: none;
 }
 main .institution {
-  padding: 3.28125vw 0;
+  padding: 20px 0;
   background: url(../img/about/shezhi.png) no-repeat center;
   background-size: 100% 100%;
 }
@@ -177,7 +176,7 @@ main .institution .institution-title {
   color: #fff;
 }
 main .institution .institution-list {
-  margin-top: 4.21875vw;
+  margin-top: 2.292vw;
 }
 main .institution .institution-list .institution-item {
   width: 25%;
@@ -203,7 +202,7 @@ main .institution .institution-list .institution-item p {
   padding: 0 30px;
 }
 main .splendid .splendid-title {
-  margin: 31px 0 38px !important;
+  margin: 2.292vw 0 !important;
 }
 
 @media screen and (max-width: 992px) {
@@ -235,6 +234,13 @@ main .splendid .splendid-title {
   main .mobaily-main .mobaily-content .item-text {
     padding: 15px;
   }
+  main .develop .develop-main .develop-content .pc--img-hide {
+    display: block;
+    margin-bottom: 20px;
+  }
+  main .develop .develop-main .develop-content .pc-img-show {
+    display: none;
+  }
 }
 @media screen and (max-width: 576px) {
   main .mobaily {
@@ -242,7 +248,6 @@ main .splendid .splendid-title {
   }
   main .main-content .content .content-main {
     background-color: transparent;
-    padding: 0;
   }
   main .main-content .mobaily .mobaily-main .mobaily-content .mobaily-item {
     width: 100%;
@@ -278,10 +283,10 @@ main .splendid .splendid-title {
 }
 @media screen and (min-width: 1920px) {
   main .main-content .college-content .college-main {
-    padding: 66px 0 29px;
+    padding: 44px 0 70px;
   }
   main .main-content .college-content .college-main .college-rigth .number {
-    margin: 83px 0 65px;
+    margin: 50px 0;
   }
   main .main-content .college-content .college-main .college-rigth .singePage p {
     margin-bottom: 33px;
@@ -290,10 +295,10 @@ main .splendid .splendid-title {
     margin-bottom: 79;
   }
   main .mobaily {
-    padding: 31px 0 45px;
+    padding: 31px 0;
   }
   main .mobaily .mobaily-content {
-    margin: 55px 0;
+    margin: 43px 0;
   }
   main .mobaily .mobaily-content .item-text {
     margin-top: 43px;
@@ -303,19 +308,22 @@ main .splendid .splendid-title {
     padding-top: 25px;
   }
   main .develop {
-    padding: 68px 0 98px;
+    padding: 44px 0 70px;
   }
   main .develop .develop-main .develop-content .text {
     margin: 44px 0 52px;
   }
   main .institution {
-    padding: 63px 0;
+    padding: 44px 0;
   }
   main .institution .institution-list {
-    margin-top: 81px;
+    margin-top: 44px;
   }
   main .institution .institution-list .institution-item .text-one {
     margin: 44px 0 34px;
     padding-bottom: 40px;
+  }
+  main .splendid .splendid-title {
+    margin: 44px 0;
   }
 }
