--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,9 @@ html {
   background-color: #EDECEC;
   border-radius: 0px 0px 4px 4px;
   margin-bottom: 18px;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
 }
 .branch-activity .branch-list-item p {
   margin: 7px;
@@ -314,6 +317,18 @@ html {
   transition: transform 0.3s, -webkit-transform 0.3s;
 }
 .branch-activity .branch-list-item a:hover img {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+.branch-activity .branch-list-item img {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+.branch-activity .branch-list-item:hover img {
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
 }
