--- a/css/about.scss
+++ b/css/about.scss
@@ -373,7 +373,7 @@ main {
             }
 
             .mobaily {
-
+                padding: 20px 0;
                 .mobaily-main {
                     .mobaily-content {
 
