--- a/css/personnel-training.css
+++ b/css/personnel-training.css
@@ -244,6 +244,8 @@ main .equipment .detail ul li {
   position: relative;
   padding-left: 27px;
   line-height: 1.875;
+  font-weight: normal;
+  font-size: 16px;
 }
 main .equipment .detail ul li::before {
   content: "";
