--- a/css/personnel-training.scss
+++ b/css/personnel-training.scss
@@ -323,7 +323,8 @@ main {
                     position: relative;
                     padding-left: 27px;
                     line-height: 1.875;
-
+                    font-weight: normal;
+                    font-size: 16px;
                     &::before {
                         content: "";
                         /* 添加伪元素内容 */
@@ -486,6 +487,7 @@ main {
                         .white-radius {
                             right: 120px;
                         }
+                       
                     }
 
                     .botm-text {}
@@ -497,6 +499,8 @@ main {
         .personalIcon {
             margin-bottom: 43px;
         }
+
+
 
         .mearge {
             padding: 56px 0 65px;
